<resources>
    <string name="app_name">IndoorApplication</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="rssi_textview_default">平均RSSI: </string>
    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="distance">实际距离</string>
    <string name="calculated_distance">距离</string>
    <string name="rssi">RSSI</string>
    <string name="device">设备</string>
    <string name="device_0">设备1</string>
    <string name="device_1">设备2</string>
    <string name="device_2">设备3</string>
    <string name="data_processing">处理数据</string>
    <string name="data_export">导出数据</string>
    <string name="data_import">导入数据</string>
    <string name="settings">设置</string>
    <string name="device_addr">MAC地址</string>
    <string name="device_position">坐标</string>
    <string name="device_position_x">X坐标</string>
    <string name="device_position_y">Y坐标</string>
    <string name="confirm_settings">确定</string>
</resources>
