<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/rssi_line_chart"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.522" />

    <Button
            android:id="@+id/start_scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:text="@string/start_scan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rssi_line_chart"
            app:layout_constraintVertical_bias="0.502" />

    <Button
            android:id="@+id/stop_scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_scan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintStart_toEndOf="@+id/start_scan_button"
            app:layout_constraintTop_toBottomOf="@+id/rssi_line_chart"
            app:layout_constraintVertical_bias="0.502" />

    <TextView
            android:id="@+id/calculated_device_text_view_1"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center|center_horizontal"
            android:textSize="16sp"
            app:fontFamily="sans-serif-thin"
            app:layout_constraintStart_toEndOf="@+id/rssi_text_view_1"
            app:layout_constraintTop_toBottomOf="@+id/calculated_device_text_view_0" />

    <EditText
            android:id="@+id/distance_edit_text_0"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center|center_horizontal"
            android:inputType="number"
            android:textSize="16sp"
            app:fontFamily="sans-serif-thin"
            app:layout_constraintStart_toEndOf="@+id/calculated_device_text_view_0"
            app:layout_constraintTop_toTopOf="@+id/device_text_view_0" />

    <TextView
            android:id="@+id/rssi_text_view_2"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center|center_horizontal"
            android:textSize="16sp"
            app:fontFamily="sans-serif-thin"
            app:layout_constraintStart_toEndOf="@+id/device_text_view_2"
            app:layout_constraintTop_toBottomOf="@+id/rssi_text_view_1" />

    <TextView
            android:id="@+id/rssi_text_view_0"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center|center_horizontal"
            android:textSize="16sp"
            app:fontFamily="sans-serif-thin"
            app:layout_constraintStart_toEndOf="@+id/device_text_view_0"
            app:layout_constraintTop_toTopOf="@+id/device_text_view_0" />

    <TextView
            android:id="@+id/rssi_text_view_1"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center|center_horizontal"
            android:textSize="16sp"
            app:fontFamily="sans-serif-thin"
            app:layout_constraintStart_toEndOf="@+id/device_text_view_1"
            app:layout_constraintTop_toBottomOf="@+id/rssi_text_view_0" />

    <TextView
            android:id="@+id/calculated_distance_text_view"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center|center_horizontal"
            android:text="@string/calculated_distance"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/calculated_device_text_view_0"
            app:layout_constraintStart_toEndOf="@+id/rssi_text_view_0" />

    <TextView
            android:id="@+id/calculated_device_text_view_0"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center|center_horizontal"
            android:textSize="16sp"
            app:fontFamily="sans-serif-thin"
            app:layout_constraintStart_toEndOf="@+id/rssi_text_view_0"
            app:layout_constraintTop_toTopOf="@+id/device_text_view_0" />

    <TextView
            android:id="@+id/device_text_view_1"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:gravity="center|center_horizontal"
            android:text="@string/device_1"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/device_text_view_0"
            app:layout_constraintTop_toBottomOf="@+id/device_text_view_0" />

    <TextView
            android:id="@+id/device_text_view_2"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:gravity="center|center_horizontal"
            android:text="@string/device_2"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/device_text_view_0"
            app:layout_constraintTop_toBottomOf="@+id/device_text_view_1" />

    <EditText
            android:id="@+id/distance_edit_text_2"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center|center_horizontal"
            android:inputType="number"
            android:textSize="16sp"
            app:fontFamily="sans-serif-thin"
            app:layout_constraintStart_toEndOf="@+id/calculated_device_text_view_1"
            app:layout_constraintTop_toBottomOf="@+id/distance_edit_text_0" />

    <TextView
            android:id="@+id/distance_text_view"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center|center_horizontal"
            android:text="@string/distance"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/distance_edit_text_0"
            app:layout_constraintStart_toEndOf="@+id/calculated_device_text_view_0" />

    <TextView
            android:id="@+id/calculated_device_text_view_2"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center|center_horizontal"
            android:textSize="16sp"
            app:fontFamily="sans-serif-thin"
            app:layout_constraintStart_toEndOf="@+id/rssi_text_view_2"
            app:layout_constraintTop_toBottomOf="@+id/calculated_device_text_view_1" />

    <TextView
            android:id="@+id/device_text_view_0"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="71dp"
            android:gravity="center|center_horizontal"
            android:text="@string/device_0"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/distance_edit_text_1"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center|center_horizontal"
            android:inputType="number"
            android:textSize="16sp"
            app:fontFamily="sans-serif-thin"
            app:layout_constraintStart_toEndOf="@+id/calculated_device_text_view_2"
            app:layout_constraintTop_toBottomOf="@+id/distance_edit_text_2" />

    <TextView
            android:id="@+id/rssi_text_view"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center|center_horizontal"
            android:text="@string/rssi"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/rssi_text_view_0"
            app:layout_constraintStart_toStartOf="@+id/rssi_text_view_0" />

</androidx.constraintlayout.widget.ConstraintLayout>